Fixing up dark mode

--- a/v2/client/src/components/chat/ChatArea.scss
+++ b/v2/client/src/components/chat/ChatArea.scss
@@ -7,8 +7,8 @@
 		justify-content: space-between;
 		align-items: center;
 		padding: 1rem 1.5rem;
-		border-top: 1px solid #cccccc;
-		border-bottom: 1px solid #cccccc;
+		border-top: 1px solid $dividerColour;
+		border-bottom: 1px solid $dividerColour;
 		box-shadow: 0 3px 6px #00000026;
 		user-select: none;
 
