--- a/v2/client/src/components/chat/QuestionDetails.scss
+++ b/v2/client/src/components/chat/QuestionDetails.scss
@@ -12,7 +12,7 @@
 
 	.chat {
 		padding: 1rem;
-		border-bottom: 1px solid #cccccc;
+		border-bottom: 1px solid $dividerColour;
 		overflow-wrap: anywhere;
 
 		.info {
